@@ -106,12 +106,14 @@ scribo_canvas_integral_browsing \
 scribo_convert_to_base64 \
 scribo_core_all \
 scribo_core_central_sites \
+scribo_core_component_features_data \
 scribo_core_component_info \
 scribo_core_component_set \
 scribo_core_concept_dmax_functor \
 scribo_core_concept_link_functor \
 scribo_core_concept_serializable \
 scribo_core_concept_serialize_visitor \
+scribo_core_def_color_type \
 scribo_core_def_lbl_type \
 scribo_core_document \
 scribo_core_erase_objects \
@@ -146,12 +148,16 @@ scribo_debug_save_comp_diff \
 scribo_debug_save_label_image \
 scribo_debug_save_table_image \
 scribo_debug_text_areas_image \
+scribo_debug_text_color_image \
 scribo_debug_usage \
 scribo_draw_all \
 scribo_draw_bounding_box_links \
 scribo_draw_bounding_boxes \
 scribo_draw_groups_bboxes \
+scribo_estim_components_features \
+scribo_estim_font_boldness \
 scribo_estim_font_color \
+scribo_estim_internal_compute_skeleton \
 scribo_estim_object_groups_v_thickness \
 scribo_filter_all \
 scribo_filter_common_objects_photo \
@@ -220,6 +226,7 @@ scribo_preprocessing_homogeneous_contrast \
 scribo_preprocessing_rotate_90 \
 scribo_preprocessing_split_bg_fg \
 scribo_primitive_all \
+scribo_primitive_extract_alignments \
 scribo_primitive_extract_all \
 scribo_primitive_extract_canvas \
 scribo_primitive_extract_cells \
@@ -263,6 +270,7 @@ scribo_primitive_link_compute \
 scribo_primitive_link_internal_compute_anchor \
 scribo_primitive_link_internal_dmax_default \
 scribo_primitive_link_internal_dmax_functor_base \
+scribo_primitive_link_internal_dmax_hrules \
 scribo_primitive_link_internal_dmax_width_and_height \
 scribo_primitive_link_internal_dmax_width_only \
 scribo_primitive_link_internal_find_link \
@@ -270,8 +278,10 @@ scribo_primitive_link_internal_link_functor_base \
 scribo_primitive_link_internal_link_several_dmax_base \
 scribo_primitive_link_internal_link_single_dmax_base \
 scribo_primitive_link_internal_link_single_dmax_ratio_aligned_base \
+scribo_primitive_link_internal_link_single_dmax_ratio_aligned_delta_base \
 scribo_primitive_link_internal_link_single_dmax_ratio_base \
 scribo_primitive_link_merge_double_link \
+scribo_primitive_link_merge_double_link_closest_aligned \
 scribo_primitive_link_with_graph \
 scribo_primitive_link_with_rag \
 scribo_primitive_link_with_several_graphes \
@@ -312,6 +322,8 @@ scribo_text_all \
 scribo_text_clean \
 scribo_text_clean_inplace \
 scribo_text_extract_lines \
+scribo_text_extract_lines_with_features \
+scribo_text_extract_lines_wo_merge \
 scribo_text_link_lines \
 scribo_text_look_like_text_lines \
 scribo_text_merging \
@@ -338,12 +350,14 @@ scribo_canvas_integral_browsing_SOURCES = scribo_canvas_integral_browsing.cc
 scribo_convert_to_base64_SOURCES = scribo_convert_to_base64.cc
 scribo_core_all_SOURCES = scribo_core_all.cc
 scribo_core_central_sites_SOURCES = scribo_core_central_sites.cc
+scribo_core_component_features_data_SOURCES = scribo_core_component_features_data.cc
 scribo_core_component_info_SOURCES = scribo_core_component_info.cc
 scribo_core_component_set_SOURCES = scribo_core_component_set.cc
 scribo_core_concept_dmax_functor_SOURCES = scribo_core_concept_dmax_functor.cc
 scribo_core_concept_link_functor_SOURCES = scribo_core_concept_link_functor.cc
 scribo_core_concept_serializable_SOURCES = scribo_core_concept_serializable.cc
 scribo_core_concept_serialize_visitor_SOURCES = scribo_core_concept_serialize_visitor.cc
+scribo_core_def_color_type_SOURCES = scribo_core_def_color_type.cc
 scribo_core_def_lbl_type_SOURCES = scribo_core_def_lbl_type.cc
 scribo_core_document_SOURCES = scribo_core_document.cc
 scribo_core_erase_objects_SOURCES = scribo_core_erase_objects.cc
@@ -378,12 +392,16 @@ scribo_debug_save_comp_diff_SOURCES = scribo_debug_save_comp_diff.cc
 scribo_debug_save_label_image_SOURCES = scribo_debug_save_label_image.cc
 scribo_debug_save_table_image_SOURCES = scribo_debug_save_table_image.cc
 scribo_debug_text_areas_image_SOURCES = scribo_debug_text_areas_image.cc
+scribo_debug_text_color_image_SOURCES = scribo_debug_text_color_image.cc
 scribo_debug_usage_SOURCES = scribo_debug_usage.cc
 scribo_draw_all_SOURCES = scribo_draw_all.cc
 scribo_draw_bounding_box_links_SOURCES = scribo_draw_bounding_box_links.cc
 scribo_draw_bounding_boxes_SOURCES = scribo_draw_bounding_boxes.cc
 scribo_draw_groups_bboxes_SOURCES = scribo_draw_groups_bboxes.cc
+scribo_estim_components_features_SOURCES = scribo_estim_components_features.cc
+scribo_estim_font_boldness_SOURCES = scribo_estim_font_boldness.cc
 scribo_estim_font_color_SOURCES = scribo_estim_font_color.cc
+scribo_estim_internal_compute_skeleton_SOURCES = scribo_estim_internal_compute_skeleton.cc
 scribo_estim_object_groups_v_thickness_SOURCES = scribo_estim_object_groups_v_thickness.cc
 scribo_filter_all_SOURCES = scribo_filter_all.cc
 scribo_filter_common_objects_photo_SOURCES = scribo_filter_common_objects_photo.cc
@@ -452,6 +470,7 @@ scribo_preprocessing_homogeneous_contrast_SOURCES = scribo_preprocessing_homogen
 scribo_preprocessing_rotate_90_SOURCES = scribo_preprocessing_rotate_90.cc
 scribo_preprocessing_split_bg_fg_SOURCES = scribo_preprocessing_split_bg_fg.cc
 scribo_primitive_all_SOURCES = scribo_primitive_all.cc
+scribo_primitive_extract_alignments_SOURCES = scribo_primitive_extract_alignments.cc
 scribo_primitive_extract_all_SOURCES = scribo_primitive_extract_all.cc
 scribo_primitive_extract_canvas_SOURCES = scribo_primitive_extract_canvas.cc
 scribo_primitive_extract_cells_SOURCES = scribo_primitive_extract_cells.cc
@@ -495,6 +514,7 @@ scribo_primitive_link_compute_SOURCES = scribo_primitive_link_compute.cc
 scribo_primitive_link_internal_compute_anchor_SOURCES = scribo_primitive_link_internal_compute_anchor.cc
 scribo_primitive_link_internal_dmax_default_SOURCES = scribo_primitive_link_internal_dmax_default.cc
 scribo_primitive_link_internal_dmax_functor_base_SOURCES = scribo_primitive_link_internal_dmax_functor_base.cc
+scribo_primitive_link_internal_dmax_hrules_SOURCES = scribo_primitive_link_internal_dmax_hrules.cc
 scribo_primitive_link_internal_dmax_width_and_height_SOURCES = scribo_primitive_link_internal_dmax_width_and_height.cc
 scribo_primitive_link_internal_dmax_width_only_SOURCES = scribo_primitive_link_internal_dmax_width_only.cc
 scribo_primitive_link_internal_find_link_SOURCES = scribo_primitive_link_internal_find_link.cc
@@ -502,8 +522,10 @@ scribo_primitive_link_internal_link_functor_base_SOURCES = scribo_primitive_link
 scribo_primitive_link_internal_link_several_dmax_base_SOURCES = scribo_primitive_link_internal_link_several_dmax_base.cc
 scribo_primitive_link_internal_link_single_dmax_base_SOURCES = scribo_primitive_link_internal_link_single_dmax_base.cc
 scribo_primitive_link_internal_link_single_dmax_ratio_aligned_base_SOURCES = scribo_primitive_link_internal_link_single_dmax_ratio_aligned_base.cc
+scribo_primitive_link_internal_link_single_dmax_ratio_aligned_delta_base_SOURCES = scribo_primitive_link_internal_link_single_dmax_ratio_aligned_delta_base.cc
 scribo_primitive_link_internal_link_single_dmax_ratio_base_SOURCES = scribo_primitive_link_internal_link_single_dmax_ratio_base.cc
 scribo_primitive_link_merge_double_link_SOURCES = scribo_primitive_link_merge_double_link.cc
+scribo_primitive_link_merge_double_link_closest_aligned_SOURCES = scribo_primitive_link_merge_double_link_closest_aligned.cc
 scribo_primitive_link_with_graph_SOURCES = scribo_primitive_link_with_graph.cc
 scribo_primitive_link_with_rag_SOURCES = scribo_primitive_link_with_rag.cc
 scribo_primitive_link_with_several_graphes_SOURCES = scribo_primitive_link_with_several_graphes.cc
@@ -544,6 +566,8 @@ scribo_text_all_SOURCES = scribo_text_all.cc
 scribo_text_clean_SOURCES = scribo_text_clean.cc
 scribo_text_clean_inplace_SOURCES = scribo_text_clean_inplace.cc
 scribo_text_extract_lines_SOURCES = scribo_text_extract_lines.cc
+scribo_text_extract_lines_with_features_SOURCES = scribo_text_extract_lines_with_features.cc
+scribo_text_extract_lines_wo_merge_SOURCES = scribo_text_extract_lines_wo_merge.cc
 scribo_text_link_lines_SOURCES = scribo_text_link_lines.cc
 scribo_text_look_like_text_lines_SOURCES = scribo_text_look_like_text_lines.cc
 scribo_text_merging_SOURCES = scribo_text_merging.cc
